Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • pulseaudio pulseaudio
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 860
    • Issues 860
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 55
    • Merge requests 55
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • PulseAudio
  • pulseaudiopulseaudio
  • Issues
  • #913
Closed
Open
Created Jun 08, 2020 by Nate Graham@ngraham

ThinkPad Yoga X1 audio devices are represented as separate devices rather than multiple sinks/sources of the same device

Summary

Lenovo ThinkPad Yoga X1 audio shows up as too many devices

environment

pa-info.txt

Steps to reproduce

  1. Have a Lenovo ThinkPad Yoga X1 laptop and install openSUSE Tumbleweed with KDE Plasma 5.19 on it
  2. Build PulseAudio 14 from source (git master)
  3. Install sof-firmware package, per https://wiki.archlinux.org/index.php/Lenovo_ThinkPad_X1_Yoga_%28Gen_4%29
  4. Open pavucontrol app and go to Output Devices tab

What is the current bug behavior?

pavucontrol lists multiple output devices (each with a single port) rather than collapsing them into different ports of the same device, and lists multiple input devices rather than collapsing them into multiple ports of the same device. As a result, the app's display is cluttered up with devices that are not useful most of the time. This affects the KDE Plasma volume control applet which makes it annoying to use:

Too_many_devices

What is the expected correct behavior?

The different audio devices would be instead represented as multiple ports of the same input/output devices

Since I had to use sof-firmware to make this device's audio work, maybe this is a bug in how sof-firmware presents the hardware to PulseAudio? If so I will file a bug there instead.

Edited Jun 08, 2020 by Nate Graham
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking